deployment: use service prefix for simplified path routing
This commit adds a service prefix to api paths. Prior to this commit
adding a new end point to ClairV4 would require operations to
reconfigure their infrastructure.
