# httptransport/server.go
@@ -19,17 +19,20 @@ import (
 
 const (
 	apiRoot                 = "/api/v1/"
+	indexerRoot             = "/indexer"
+	matcherRoot             = "/matcher"
+	notifierRoot            = "/notifier"
 	internalRoot            = apiRoot + "internal/"
-	VulnerabilityReportPath = apiRoot + "vulnerability_report/"
-	IndexAPIPath            = apiRoot + "index_report"
-	IndexReportAPIPath      = apiRoot + "index_report/"
-	IndexStateAPIPath       = apiRoot + "index_state"
-	NotificationAPIPath     = apiRoot + "notification/"
-	KeysAPIPath             = apiRoot + "services/notifier/keys"
-	KeyByIDAPIPath          = apiRoot + "services/notifier/keys/"
-	AffectedManifestAPIPath = internalRoot + "affected_manifest/"
-	UpdateOperationAPIPath  = internalRoot + "update_operation/"
-	UpdateDiffAPIPath       = internalRoot + "update_diff/"
+	IndexAPIPath            = indexerRoot + apiRoot + "index_report"
+	IndexReportAPIPath      = indexerRoot + apiRoot + "index_report/"
+	IndexStateAPIPath       = indexerRoot + apiRoot + "index_state"
+	AffectedManifestAPIPath = indexerRoot + internalRoot + "affected_manifest/"
+	VulnerabilityReportPath = matcherRoot + apiRoot + "vulnerability_report/"
+	UpdateOperationAPIPath  = matcherRoot + internalRoot + "update_operation/"
+	UpdateDiffAPIPath       = matcherRoot + internalRoot + "update_diff/"
+	NotificationAPIPath     = notifierRoot + apiRoot + "notification/"
+	KeysAPIPath             = notifierRoot + apiRoot + "services/notifier/keys"
+	KeyByIDAPIPath          = notifierRoot + apiRoot + "services/notifier/keys/"
 	OpenAPIV1Path           = "/openapi/v1"
 )
 
